--- a/style.css
+++ b/style.css
@@ -890,7 +890,7 @@ section#contact div#form p button#submitButton {
         background-size: cover !important;
     }
 
-    section#first-view a:nth-child(1) {
+    /* section#first-view a:nth-child(1) {
         background-attachment: scroll;
         background-image: url(./img/Slide-SEMBRA-11000-mobile.jpg);
     }
@@ -920,7 +920,7 @@ section#contact div#form p button#submitButton {
     section#first-view a:nth-child(5) {
         background-attachment: scroll;
         background-image: url(./img/Slide-SEMBRA-SCREEN-EXTERIOR-mobile.jpg);
-    }
+    } */
 
     section#s4000,
     section#s7000,
