--- a/style.css
+++ b/style.css
@@ -98,7 +98,7 @@ body {
     font-family: "TT Lakes Medium", Tahoma, Geneva, Verdana, sans-serif;
     font-size: 16px;
     background-attachment: fixed;
-    background-image: url(./background.jpg);
+    background-image: url(https://cdngroup.sfo3.cdn.digitaloceanspaces.com/sembra-images/img-home/background.webp);
     background-position: center;
     background-size: cover;
     margin-left:0px;
